set max-width of 100% for img tags. make it looks good on mobile devices. fixed #15

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,9 @@
 @import "lanyon/lanyon"
 @import "prism"
 
+img
+  max-width: 100%
+
 // share buttons
 .btn-share
   font-family: sans-serif
